# reporter

./: .gitignore  run.sh
core/: api.py  pyproject.toml  schema.prisma
core/migrations/20240726062005_add_task_model/: migration.sql
core/migrations/20240726143255_change_task_to_log/: migration.sql
core/migrations/20240727045809_remove_name_from_property/: migration.sql
core/migrations/20240727050116_remove_is_global/: migration.sql
core/migrations/20240727051242_remove_position/: migration.sql
core/migrations/20240728083640_add_on_delete/: migration.sql
core/migrations/20240728083823_add_updated_at/: migration.sql
web/: index.html  jsconfig.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.vue  main.ts  style.scss
web/src/components/partials/: Sidebar.vue
web/src/components/ui/datetimepicker/: DateTimePicker.vue  Dates.vue  Month.vue  Time.vue  Year.vue  models.ts
web/src/components/ui/input/: SelectInput.vue  TextInput.vue  input-models.ts
web/src/components/ui/modal/: Modal.vue
web/src/components/ui/pagination/: Pagination.vue
web/src/components/ui/table/: DataTable.vue
web/src/components/ui/toast/: Toast.vue  timer.ts  types.ts
web/src/services/: api.ts  models.ts
web/src/store/: error.ts
web/src/tools/: icons.ts
web/src/views/: Home.vue
